--- a/widget/html/optionmodal.html
+++ b/widget/html/optionmodal.html
@@ -1,3 +1,4 @@
+<div id="multihack-network"></div>
 <p><b>Leave Room</b> - Stop syncing code.</p>
 <p><b>Join/Leave Call</b> - Join/Leave the voice call.</p>
 <p><b>Fetch Code</b> - Get the other person's code.</p>
