--- a/widget/html/modal.html
+++ b/widget/html/modal.html
@@ -1,3 +1,4 @@
 <p>Enter the ID for the room you want to join.</p>
 <input id="multihack-room" placeholder="roomID" type="text" />
-<p>Make sure all members have the same project before starting.</p>
+<p>Enter a nickname so your team knows who you are. <b>(Optional)</b></p>
+<input id="multihack-nickname" placeholder="Nickname" type="text" />
