performance and UI updates

--- a/widget/html/optionmodal.html
+++ b/widget/html/optionmodal.html
@@ -1,4 +1,7 @@
-<div id="multihack-network"></div>
+<div id="multihack-network-container">
+  <div id="multihack-network"></div>
+</div>
+<h3 style="-webkit-user-select: all; user-select: all; cursor: text"><b>Room:</b> {{room}}</h3>
 <p><b>Leave Room</b> - Stop syncing code.</p>
 <p><b>Join/Leave Call</b> - Join/Leave the voice call.</p>
-<p><b>Fetch Code</b> - Get the other person's code.</p>
+<p><b>Fetch Code</b> - Force a resync.</p>
