--- a/widget/html/modal.html
+++ b/widget/html/modal.html
@@ -1,4 +1,4 @@
-<p>Enter the ID for the room you want to join.</p>
-<input id="multihack-room" placeholder="roomID" type="text" />
-<p>Enter a nickname so your team knows who you are. <b>(Optional)</b></p>
-<input id="multihack-nickname" placeholder="Nickname" type="text" />
+<p>{{choose_room_prompt}}</p>
+<input id="multihack-room" placeholder="{{room_placeholder}}" type="text" />
+<p>{{nickname_prompt}}<b>{{optional}}</b></p>
+<input id="multihack-nickname" placeholder="{{nickname_placeholder}}" type="text" />
