--- a/widget/html/optionmodal.html
+++ b/widget/html/optionmodal.html
@@ -1,6 +1,4 @@
 <div id="multihack-network-container">
   <div id="multihack-network"></div>
 </div>
-<h3 style="-webkit-user-select: all; user-select: all; cursor: text"><b>Room:</b> {{room}}</h3>
-<p><b>Leave Room</b> - Stop syncing code.</p>
-<p><b>Join/Leave Call</b> - Join/Leave the voice call.</p>
+<h3 style="-webkit-user-select: all; user-select: all; cursor: text"><b>{{room_lang}}:</b> {{room}}</h3>
